# RobotGazeboPlugin6X6

./: 6X6_0.world  README1.md
Plugin_6X6/: CMakeLists.txt  Plugin_6X6.cc
Scence/: Scence_1.sdf  model.config
Scence/materials/scripts/: table_lightmap.material
Scence/meshes/: snow-mountains.dae
listener/: CMakeLists.txt  listener.cc  prot位置
